# Wedding-Planner-OS-demo-Model

./: .dockerignore  .env.example  .gitignore  Dockerfile  GEMINI_SETUP.md  IMAGE_MODELS.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  README_PYTHON_VERSION.md  nohup.out  pyproject.toml  requirements.txt  runtime.txt  test_migration.py
app/: main.py
app/core/: config.py  exceptions.py
app/routers/: chat_routes.py  gemini_routes.py  image_generation_routes.py  invitation_routes.py  predict_routes.py  review_summary_routes.py  sentiment_routes.py
app/schemas/: chat_schema.py  prediction.py
app/services/: chat_service.py  gemini_image_service.py  gemini_service.py  huggingface_service.py  imagen_service.py  model_service.py  review_summary_service.py  sentiment_service.py
app/static/: index.html
assets/: keras_model.h5
models/: sentiment.py
