[project]
name = "wedding-os-model"
version = "0.1.0"
description = "Wedding OS Model Server - AI 모델 서버"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.121.3",
    "uvicorn[standard]>=0.38.0",
    "httpx>=0.28.1",
    "google-genai>=1.52.0",
    "tensorflow>=2.15.1",
    "keras>=2.15.0",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true




